--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>&copy; 2024 難聴児療育施設マップ</p>
   </footer>
 
-  <script src="https://www.bing.com/api/maps/mapcontrol?key=ArnYuTTOitPVbPftcUX1lPNN5QVgrbiVqiaaxFs5qtzlj4NUKZ1BLmao-LDAXuOF"></script>
+  <script src="https://www.bing.com/api/maps/mapcontrol?key="></script>
 
   <script>
     let map;
